--- a/sass/base.module.scss
+++ b/sass/base.module.scss
@@ -81,13 +81,14 @@ html {
   box-sizing: border-box;
   font-size: 62.5%; //10px/16px = 62.5% 1rem
   font-family: $font-primary;
-
-  @media (min-width: 320px) and (max-width: 480px) {
+  @media (min-width: 320px) and (max-width: 768px) {
     // font-size: 50%;
   }
-
-  @media (min-width: 768px) and (max-width: 1024px) {
-    font-size: 62.5%;
+  @media (min-width: 769px) and (max-width: 1024px) {
+    font-size: 42%;
+  }
+  @media (min-width: 1024px) and (max-width: 1440px) {
+    font-size: 50%;
   }
 }
 
