--- a/sass/success.module.scss
+++ b/sass/success.module.scss
@@ -29,6 +29,7 @@
       fill: $color-primary;
       border: 0.5rem solid $color-faded;
       border-radius: 100%;
+      border: 2px solid red;
     }
     & h3 {
       font-size: 2.4rem;
