--- a/sass/index.module.scss
+++ b/sass/index.module.scss
@@ -2,8 +2,12 @@
 // ---------------------------------------------------------------------//
 .header {
   padding: 0;
-  height: 65rem;
+  height: 70rem;
   position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   &__bg {
     height: 100%;
     width: 100%;
@@ -32,17 +36,26 @@
     }
     & .wave {
       position: absolute;
+      overflow: hidden;
       width: 100%;
       height: 11.117rem;
-      background-image: url('../images/curve-web.svg');
       left: 0;
-      bottom: 0rem;
+      bottom: 0;
       z-index: 3;
+      & svg {
+        width: 100%;
+        height: 102%;
+      }
+
+      & .mobile,
+      & .tab {
+        display: none;
+      }
     }
   }
 
-  @media (min-width: 320px) and (max-width: 767px) {
-    height: 106.2rem;
+  @media (min-width: 320px) and (max-width: 480px) {
+    height: 110rem;
     &__bg {
       background: linear-gradient(0deg, #1b4835 64.55%, rgba(27, 72, 53, 0) 69.32%);
       & .image {
@@ -53,15 +66,37 @@
           background: linear-gradient(180deg, #194d41 0%, rgba(25, 77, 65, 0.4) 100%);
         }
       }
+
+      & .wave {
+        & .web,
+        & .tab {
+          display: none;
+        }
+
+        & .mobile {
+          display: block;
+        }
+      }
     }
   }
-  @media (min-width: 768px) and (max-width: 1024px) {
-    height: 109rem;
+  @media (min-width: 480px) and (max-width: 768px) {
+    height: 116rem;
     &__bg {
       & .image {
-        height: 109rem;
+        height: 100%;
         width: 125rem;
         background-position: bottom right;
+      }
+
+      & .wave {
+        & .web,
+        & .mobile {
+          display: none;
+        }
+
+        & .tab {
+          display: block;
+        }
       }
     }
   }
@@ -74,33 +109,15 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  left: 0;
-  top: 12.7rem;
   z-index: 5;
   width: 100%;
-
   &__text {
     width: 48.47%;
-    & h1 {
-      text-transform: uppercase;
-      font-weight: 700;
-      color: $color-white;
-      line-height: 7.2rem;
-      font-size: 6.4rem;
-      & span {
-        color: transparent;
-        -webkit-text-stroke-width: 0.05rem;
-        -webkit-text-stroke-color: $color-white;
-      }
-    }
     svg {
       height: 14.4rem;
-      width: 100%;
+      width: 51.1rem;
       padding: 0;
       margin: 0;
-    }
-    &__mobile {
-      display: none;
     }
     & p {
       color: rgba($color-white, 0.8);
@@ -151,7 +168,7 @@
     }
   }
 
-  @media (min-width: 320px) and (max-width: 767px) {
+  @media (min-width: 320px) and (max-width: 480px) {
     top: 6.8rem;
     padding: 1.6rem;
     flex-direction: column;
@@ -169,6 +186,7 @@
       &__mobile {
         display: block;
       }
+
       & p {
         font-size: 1.4rem;
         line-height: 2.4rem;
@@ -188,8 +206,13 @@
       }
       &__group {
         flex-direction: column;
+        width: 100%;
         &:not(:last-of-type) {
           margin-bottom: 0;
+        }
+
+        & > * {
+          width: 100%;
         }
       }
       & button {
@@ -200,34 +223,20 @@
     }
   }
 
-  @media (min-width: 472px) and (max-width: 767px) {
-    &__text {
-      margin: 5.6rem 0 0 0;
-      width: 74.73%;
-      & p {
-      }
-    }
-    &__form {
-      width: 47.2rem;
-      &__group {
-        flex-direction: row;
-        &:not(:last-of-type) {
-          margin-bottom: 0;
-        }
-      }
-    }
-  }
-
-  @media (min-width: 768px) and (max-width: 1024px) {
+  @media (min-width: 480px) and (max-width: 768px) {
     flex-direction: column;
     padding: 0 2.4rem;
-
+    top: 18rem;
     &__text {
-      margin: 5.6rem 0;
-      width: 74.73%;
+      margin-bottom: 5.6rem;
+      width: 79%;
       text-align: center;
       &__web {
         display: none;
+      }
+
+      & svg {
+        width: 100%;
       }
 
       &__mobile {
@@ -237,6 +246,13 @@
 
     &__form {
       width: 47.2rem;
+    }
+  }
+
+  @media (min-width: 480px) and (max-width: 620px) {
+    top: 12.8rem;
+    &__text {
+      width: 100%;
     }
   }
 }
@@ -303,7 +319,7 @@
     }
   }
 
-  @media (min-width: 320px) and (max-width: 767px) {
+  @media (min-width: 320px) and (max-width: 480px) {
     padding-bottom: 0rem;
     background-color: $color-white;
     &__images {
@@ -327,7 +343,7 @@
     }
   }
 
-  @media (min-width: 768px) and (max-width: 1024px) {
+  @media (min-width: 480px) and (max-width: 768px) {
     padding-top: 2.4rem;
     &__text {
       &__heading {
@@ -340,6 +356,10 @@
         -moz-column-gap: 2.4rem;
         columns: 34.8rem;
         column-gap: 2.4rem;
+
+        & button {
+          margin-top: 0rem;
+        }
       }
     }
   }
@@ -350,8 +370,8 @@
 .swiper {
   position: relative;
   z-index: 10 !important;
-  margin-top: -3rem;
   height: 33.76rem;
+  margin-top: -3rem;
   &-button {
     &-prev,
     &-next {
@@ -384,6 +404,11 @@
   }
   &-pagination {
     bottom: 0rem;
+    & > * {
+      &:not(:last-child) {
+        margin-right: 3.6rem !important;
+      }
+    }
     &-bullet {
       height: 1.6rem;
       width: 1.6rem;
@@ -395,7 +420,7 @@
     }
   }
 
-  @media (min-width: 320px) and (max-width: 767px) {
+  @media (min-width: 320px) and (max-width: 480px) {
     height: auto;
     margin-top: 8rem;
     padding-bottom: 12.8rem;
@@ -407,7 +432,7 @@
     }
   }
 
-  @media (min-width: 768px) and (max-width: 1024px) {
+  @media (min-width: 480px) and (max-width: 768px) {
     margin-top: -7.1rem;
     height: 31.9rem;
     &-button {
@@ -471,7 +496,7 @@
     filter: drop-shadow(0px 10px 30px rgba(0, 0, 0, 0.12));
   }
 
-  @media (min-width: 320px) and (max-width: 767px) {
+  @media (min-width: 320px) and (max-width: 480px) {
     position: relative;
     top: 6rem;
     height: auto;
@@ -510,8 +535,7 @@
     }
   }
 
-  @media (min-width: 768px) and (max-width: 1024px) {
-    border-top: 0.2rem solid #cacaca;
+  @media (min-width: 480px) and (max-width: 768px) {
     padding-top: 4.1rem;
     width: 72rem;
     height: 19.8rem;
@@ -571,9 +595,9 @@
       width: 100%;
       display: flex;
       justify-content: space-between;
-      gap: 3.5rem;
+      gap: 3%;
       & > * {
-        width: 37.1rem;
+        width: 31.33%;
         & p {
           font-size: 1.4rem;
           line-height: 2.4rem;
@@ -597,11 +621,12 @@
     width: 100%;
     display: flex;
     flex-wrap: wrap;
-    gap: 3.5rem;
+    gap: 3%;
     &__box {
-      width: 37.1rem;
+      width: 31.33%;
       border: 0.2rem solid $color-primary;
       height: 9.6rem;
+      margin-bottom: 3%;
       border-radius: 0.4rem;
       display: flex;
       align-items: center;
@@ -655,7 +680,7 @@
     }
   }
 
-  @media (min-width: 320px) and (max-width: 767px) {
+  @media (min-width: 320px) and (max-width: 480px) {
     &__text {
       &__heading {
         position: relative;
@@ -690,7 +715,7 @@
     }
   }
 
-  @media (min-width: 768px) and (max-width: 1024px) {
+  @media (min-width: 480px) and (max-width: 768px) {
     &__text {
       & hr {
         width: 6.8rem;
@@ -713,10 +738,11 @@
     &__row {
       flex-wrap: wrap;
       justify-content: center;
-      gap: 2.4rem;
+      justify-content: space-between;
       &__box {
-        width: 34.8rem;
-        margin-bottom: 0rem;
+        width: 48%;
+        margin-bottom: 2.4rem;
+        padding: 0;
       }
     }
   }
@@ -727,56 +753,64 @@
 .video {
   padding: 0;
   position: relative;
-  &__bg {
-    position: relative;
-    &__mobile {
-      display: none;
-    }
-    &__web {
-      position: absolute;
-      height: 100%;
-    }
-    &__pic {
-      height: 64.8rem;
-      padding: 0;
-      margin: 0;
-      width: 100%;
-      &::after {
-        position: absolute;
-        height: 100%;
-        width: 100%;
-        left: 0;
-        bottom: 0;
-        content: '';
-        border: none;
-        outline: none;
-        background: rgba(25, 77, 68, 0.3);
-        background-repeat: no-repeat;
-        z-index: 1;
-        display: n;
-      }
-      & img {
-        width: 100%;
-        height: 100%;
-      }
-    }
-  }
-  &__text {
+  height: 100%;
+  margin: 0 auto;
+  &__cover {
     position: absolute;
     top: 0;
+    width: 52%;
+    height: 100%;
+    & svg {
+      width: 100%;
+      height: 100%;
+    }
+  }
+
+  &__pic {
+    padding: 0;
+    margin: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1000;
+    &::after {
+      position: absolute;
+      height: 100%;
+      width: 100%;
+      left: 0;
+      bottom: 0;
+      content: '';
+      border: none;
+      outline: none;
+      background: rgba(25, 77, 68, 0.3);
+      background-repeat: no-repeat;
+      z-index: 1;
+    }
+    & img {
+      width: 100%;
+      height: 100%;
+    }
+  }
+
+  &__content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     z-index: 3;
-    padding-top: 9.4rem;
-    padding-right: 12.8rem;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 
     &__web {
       width: 44.3rem;
       height: 5.2rem;
-      margin-bottom: 4.8rem;
     }
     &__mobile {
       display: none;
     }
     &__list {
+      margin-top: 4.8rem;
       & > * {
         &:not(:last-child) {
           margin-bottom: 2.2rem;
@@ -808,20 +842,25 @@
           color: rgba($color-white, 0.8);
           line-height: 2.8rem;
           font-size: 1.8rem;
-          width: 43rem;
         }
       }
     }
   }
 
+  &__left {
+    width: 39.86%;
+  }
+
+  &__right {
+    width: 45%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
   &__button {
-    position: absolute;
-    z-index: 3;
     border: 2px solid rgba($color-white, 0.3);
     border-radius: 100%;
-    top: 50%;
-    left: 75%;
-    transform: translate(-50%, -50%);
     transition: width 0.06s, height 0.06s;
     transition-timing-function: ease-out;
     height: 20.8rem;
@@ -860,82 +899,114 @@
   }
 
   @media (min-width: 320px) and (max-width: 768px) {
-    margin: 0;
-    width: 100%;
+    &__cover {
+      display: none;
+    }
 
-    &__bg {
-      display: flex;
-      flex-direction: column;
-      position: relative;
-      height: 90rem;
-      &__web {
-        display: none;
+    &__mobile {
+      position: absolute;
+      top: 0;
+      display: block;
+      width: 100%;
+      height: 60.33%;
+      & img {
+        width: 100%;
+        height: 100%;
       }
+    }
+
+    &__pic {
+      display: none;
       &__mobile {
         display: block;
-        width: 100%;
-        height: 74.77%;
-        & img {
-          width: 100%;
-          height: 100%;
-        }
-      }
-      &__pic {
         position: absolute;
-        bottom: 0rem;
-        height: 28rem;
-        width: 100%;
-        z-index: -1;
-        overflow: hidden;
-
-        & img {
+        bottom: 0;
+        width: unset;
+        &::after {
+          position: absolute;
           height: 100%;
-          width: 150%;
-          margin-left: -50%;
+          width: 100%;
+          left: 0;
+          bottom: 0;
+          content: '';
+          border: none;
+          outline: none;
+          background: rgba(25, 77, 68, 0.3);
+          background-repeat: no-repeat;
+          z-index: 1;
         }
       }
     }
 
-    &__text {
-      padding: 8rem 1.6rem 0 1.6rem;
-      width: 100%;
-      left: 0;
-      display: flex;
+    &__content {
       flex-direction: column;
-      align-items: center;
-      &__web {
+      top: 0;
+      left: 0;
+      transform: unset;
+      height: 100%;
+      &__mobile {
         display: none;
       }
-      &__mobile {
-        display: block;
-        width: 65.27%;
-        height: 9.6rem;
-        margin-bottom: 3.6rem;
-      }
-
       &__list {
+        margin-top: 1.6rem;
         & > * {
           &:not(:last-child) {
             margin-bottom: 1.6rem;
           }
         }
       }
-      &__card {
-        width: 100%;
+    }
 
-        &__heading {
+    &__left {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+
+    &__right {
+      align-items: flex-start;
+    }
+
+    &__logo {
+      left: 50%;
+      right: unset;
+      transform: translate(-50%, -50%);
+    }
+  }
+
+  @media (min-width: 320px) and (max-width: 480px) {
+    height: 90rem;
+    &__mobile {
+      height: 74.77%;
+    }
+
+    &__pic {
+      &__mobile {
+        height: 35%;
+        & img {
+          height: 100%;
           width: 100%;
+        }
+      }
+    }
+    &__content {
+      &__web {
+        display: none;
+      }
+      &__mobile {
+        display: block;
+      }
+      &__card {
+        &__heading {
+          margin-bottom: 0.4rem;
           & h3 {
-            padding-left: 1.6rem;
             font-size: 1.8rem;
             line-height: 2.4rem;
           }
         }
         &__text {
-          width: 100%;
-          padding-left: 3.4rem;
           & p {
-            width: 100%;
             font-size: 1.4rem;
             line-height: 2.4rem;
           }
@@ -943,74 +1014,58 @@
       }
     }
 
-    &__button {
-      top: 73%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      & svg {
-        height: 9.866rem;
-        width: 9.866rem;
-      }
-    }
-
-    &__logo {
+    &__left {
       width: 100%;
-      left: 0;
-      display: flex;
-      justify-content: center;
+      height: 63%;
     }
-  }
 
-  @media (min-width: 320px) and (max-width: 360px) {
-    &__bg {
-      height: 83rem;
-      &__mobile {
-        height: 75%;
-      }
-    }
-    &__text {
-      padding-top: 4rem;
-      &__mobile {
-        margin-bottom: 1.6rem;
-      }
+    &__right {
+      width: 100%;
+      height: 37%;
     }
 
     &__button {
       height: 12.8rem;
       width: 12.8rem;
       & svg {
-        width: 9.866rem;
         height: 9.866rem;
+        width: 9.866rem;
       }
+
       &:hover {
-        width: 16.492rem;
-        height: 16.492rem;
+        width: 14rem;
+        height: 14rem;
       }
 
       &:active {
-        height: 12.8rem;
         width: 12.8rem;
+        height: 12.8rem;
       }
     }
   }
 
-  @media (min-width: 375px) and (max-width: 425px) {
-    &__bg {
-      height: 90rem;
+  @media (min-width: 480px) and (max-width: 768px) {
+    height: 107.4rem;
+    &__mobile {
+      height: 60.33%;
+    }
+    &__pic {
       &__mobile {
-        width: 100%;
-        height: 75%;
-      }
-      &__pic {
+        height: 46.55%;
+        & img {
+          height: 100%;
+          width: 100%;
+        }
       }
     }
-    &__text {
-      padding-top: 8rem;
+
+    &__content {
       &__mobile {
-        margin-bottom: 4rem;
+        display: none;
       }
 
       &__list {
+        margin-top: 6.4rem;
         & > * {
           &:not(:last-child) {
             margin-bottom: 1.6rem;
@@ -1019,162 +1074,33 @@
       }
     }
 
-    &__button {
-      height: 12.8rem;
-      width: 12.8rem;
-      & svg {
-        width: 9.866rem;
-        height: 9.866rem;
-      }
-      &:hover {
-        width: 16.492rem;
-        height: 16.492rem;
-      }
-
-      &:active {
-        height: 12.8rem;
-        width: 12.8rem;
-      }
-    }
-  }
-
-  @media (min-width: 425px) and (max-width: 576px) {
-    &__bg {
-      height: 90rem;
-      &__mobile {
-        width: 100%;
-        height: 75%;
-      }
-      &__pic {
-        height: 32rem;
-      }
-    }
-
-    &__text {
-      padding-top: 8rem;
-      &__web {
-        width: 80%;
-        display: block;
-        margin-bottom: 6.4rem;
-      }
-
-      &__mobile {
-        display: none;
-      }
-
-      &__list {
-        & > * {
-          &:not(:last-child) {
-            margin-bottom: 3.2rem;
-          }
-        }
-      }
-    }
-
-    &__button {
-      height: 12.8rem;
-      width: 12.8rem;
-      & svg {
-        width: 9.866rem;
-        height: 9.866rem;
-      }
-      &:hover {
-        width: 16.492rem;
-        height: 16.492rem;
-      }
-
-      &:active {
-        height: 12.8rem;
-        width: 12.8rem;
-      }
-    }
-  }
-
-  @media (min-width: 576px) and (max-width: 768px) {
-    &__bg {
-      height: 96rem;
-      &__web {
-        display: none;
-      }
-      &__mobile {
-        display: block;
-        width: 100%;
-        height: 60%;
-        & img {
-          width: 100%;
-          height: 100%;
-        }
-      }
-      &__pic {
-        position: absolute;
-        bottom: 0;
-        z-index: -1;
-        height: 48rem;
-        & img {
-          height: 100%;
-          width: 175%;
-          margin-left: -75%;
-        }
-      }
-    }
-
-    &__text {
+    &__left {
       width: 100%;
-      left: 0;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding-right: 0;
-      &__web {
-        display: block;
-        margin-bottom: 4.8rem;
-      }
+      height: 47%;
+    }
 
-      &__mobile {
-        display: none;
-      }
-      &__list {
-        width: 100%;
-        padding-left: 4.8rem;
-        padding-right: 2.4rem;
-        & > * {
-          &:not(:last-child) {
-            margin-bottom: 2.4rem;
-          }
-        }
-      }
-      &__card {
-        width: 100%;
-        &__text {
-          width: 100%;
-          & p {
-            width: 100%;
-          }
-        }
-      }
+    &__right {
+      width: 100%;
+      height: 53%;
+      margin-top: -8rem;
     }
 
     &__button {
-      top: 58.5%;
-      left: 50%;
-      transform: translate(-50%, -50%);
       height: 20rem;
       width: 20rem;
       & svg {
-        width: 15.415rem;
         height: 15.415rem;
+        width: 15.415rem;
       }
       &:hover {
-        width: 23.692rem;
-        height: 23.692rem;
+        width: 24rem;
+        height: 24rem;
       }
 
       &:active {
-        width: 20rem;
         height: 20rem;
+        width: 20rem;
       }
-    }
-    &__button {
     }
   }
 }
